[metadata]
name = crontab-lint
version = 0.1.0
description = A static analysis tool for validating and explaining crontab expressions
long_description = file: README.md
long_description_content_type = text/markdown
author = crontab-lint contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = crontab_lint
python_requires = >=3.8

[options.entry_points]
console_scripts =
    crontab-lint = crontab_lint.cli:main

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 99
exclude = .git,__pycache__,build,dist
